src/test/ui/typeck/bad-lhs-should-deref.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/bad-lhs-should-deref.rs:6:15
   |
LL |     mut_ref() = 1;
   |     --------- ^
   |     |
   |     cannot assign to this expression
   |
help: consider dereferencing here to assign a value to the left-hand side
   |
LL |     **mut_ref() = 1;
   |     ++

error[E0308]: mismatched types
  --> $DIR/bad-lhs-should-deref.rs:11:9
   |
LL |     let x = Box::new(1);
   |             ----------- expected due to this value
LL |     x = 2;
   |         ^ expected struct `Box`, found integer
   |
   = note: expected struct `Box<{integer}>`
                found type `{integer}`
   = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
help: store this in the heap by calling `Box::new`
   |
LL |     x = Box::new(2);
   |         +++++++++ +
help: consider dereferencing here to assign a value to the left-hand side
   |
LL |     *x = 2;
   |     +

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0070, E0308.
For more information about an error, try `rustc --explain E0070`.
